surrogates/HMS/error_chem_sens-15077021.err
The following modules were not unloaded:
  (Use "module --force purge" to unload all):

  1) ccrenv   2) gentoo/2023.01   3) ccrsoft/2023.01
***************************** WARNING *********************************************
You're loading very old software that is no longer supported.  This software will be removed from CCR
during the June 2024 downtime.  Please update your workflow to utilize CCR's latest software release
*****************************************************************************************

The following have been reloaded with a version change:
  1) ccrsoft/2023.01 => ccrsoft/legacy

Lmod has detected the following error: The following module(s) are unknown:
"anaconda"

Please check the spelling or version number. Also try "module spider ..."
It is also possible your cache file is out-of-date; it may help to try:
  $ module --ignore_cache load "anaconda"

Also make sure that all modulefiles written in TCL start with the string
#%Module



  File "HMSpredict.py", line 54
    QoI = predict(np.matmul(np.array([[0.043069417, 0.0086, E1, E257, E250, b249, Lv, v]]), max_cols[:-1, :-1]), sparse, T, Cs))
                                                                                                                               ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "driver.py", line 24, in <module>
    with open ('predict.txt', "r") as myoutfile:
IOError: [Errno 2] No such file or directory: 'predict.txt'

Error: cannot open results file "results.out" for evaluation 1
srun: error: cpn-q06-20: task 0: Exited with exit code 252
srun: launch/slurm: _step_signal: Terminating StepId=15077021.0
